--- a/src/app/pages/help/help.page.html
+++ b/src/app/pages/help/help.page.html
@@ -12,19 +12,19 @@
     <ion-list>
       <ion-item>
         <ion-label>Call WHO helpline Number</ion-label>
-        <ion-button color='warning' href="tel:+41-22-7912111"><ion-icon name=callOutline></ion-icon>Call</ion-button>
+        <ion-button color='warning' href="tel:+41-22-7912111"><ion-icon name="call"></ion-icon>Call</ion-button>
       </ion-item>
       <ion-item>
         <ion-label>Email WHO Team</ion-label>
-        <ion-button color='warning' href="mailto:mediainquiries@who.int"><ion-icon name=mailOutline></ion-icon>Email</ion-button>
+        <ion-button color='warning' href="mailto:mediainquiries@who.int"><ion-icon name="mail"></ion-icon>Email</ion-button>
       </ion-item>
       <ion-item>
         <ion-label>Text 'Hi' to WHO helpdesk</ion-label>
-        <ion-button color='warning' href="https://api.whatsapp.com/send?phone=41798931892&text=hi&source=&data="><ion-icon name=logoWhatsapp></ion-icon>WhatsApp</ion-button>
+        <ion-button color='warning' href="https://api.whatsapp.com/send?phone=41798931892&text=hi&source=&data="><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</ion-button>
       </ion-item>
       <ion-item>
         <ion-label>Donate via WHO website</ion-label>
-        <ion-button color='warning' href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/donate"><ion-icon name=walletOutline></ion-icon>Donate</ion-button>
+        <ion-button color='warning' href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/donate"><ion-icon name="cash"></ion-icon>Donate</ion-button>
       </ion-item>
     </ion-list>
   </ion-card>
